First Commit of Script and CSV

--- a/Project-2-Bridge/package.json
+++ b/Project-2-Bridge/package.json
@@ -16,6 +16,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "csv-writer": "^1.6.0",
     "dotenv": "^16.4.1",
     "ethers": "^6.10.0"
   }
