--- a/Project-2-Bridge/package.json
+++ b/Project-2-Bridge/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build": "tsc",
     "start": "npm run build && node dist/index.js",
+    "fetch": "npm run build && node dist/fetchValidators.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -18,6 +19,7 @@
   "dependencies": {
     "csv-writer": "^1.6.0",
     "dotenv": "^16.4.1",
-    "ethers": "^6.10.0"
+    "ethers": "^6.10.0",
+    "node-fetch": "^3.3.2"
   }
 }
